[workspace]
resolver = "2"
members = ["lib"]

[package]
name = "rumigame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruminative = { path = "../ruminative" }
#ruminative = { git = "https://github.com/Nhlest/ruminative", branch = "master" }
#hot-lib-reloader = "0.6.*"
#lib = { path = "lib" }


[profile.release]
strip = true

[profile.dev]
#strip = true
opt-level = 1
overflow-checks = false
incremental = true

[profile.dev.package."*"]
#strip = true
opt-level = 3
overflow-checks = false
incremental = true
