[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ruminative = { path = "../../ruminative" }
ruminative = { git = "https://github.com/Nhlest/ruminative", branch = "master" }

[lib]
#crate-type = ["rlib", "dylib"]